syntax = "proto3";

option go_package = "rpc";

package rpc;

message Empty {

}

message Bool {
    bool value = 1;
}

message Text {
    string value = 1;
}

message Int64 {
    int64 value = 1;
}

message Int32 {
    int32 value = 1;
}